# mundialPorrasF1_BE

./: .gitignore  README.md  dev.db  main.py  pyproject.toml  requirements.txt
app/api/: achievements.py  admin.py  auth.py  avatars.py  bingo.py  grand_prix.py  predictions.py  race_results.py  scoring.py  seasons.py  standings.py  stats.py  teams.py
app/core/: deps.py  security.py
app/db/: session.py
app/db/models/: _all.py  achievement.py  avatar.py  bingo.py  constructor.py  driver.py  grand_prix.py  multiplier_config.py  prediction.py  prediction_event.py  prediction_position.py  race_event.py  race_position.py  race_result.py  season.py  team.py  team_member.py  user.py  user_stats.py
app/schemas/: season.py  user.py
app/scripts/: create_admin.py  seed_data.py  seed_data_achievements.py  seed_data_bingo.py  seed_data_bingo_preseason.py  seed_data_long_run.py  seed_data_probe_achievements.py  seed_datav2.py
app/services/: achievements_service.py  f1_sync.py  scoring.py
